[package]
name = "musical-note"
version = "0.1.102"
edition = "2021"
authors = ["Timofei Kazantsev (Levitanus) <pianoist@ya.ru>"]
license = "MIT"
repository = "https://github.com/Levitanus/musical-note"
readme = "README.md"
description = "Represents general musical note and allow to convert it, currently only to MIDI byte and back."
documentation = "https://docs.rs/musical-note/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.16"
regex = "1"
lazy_static = "1.4"
