[package]
authors = ["Timofei Kazantsev (Levitanus) <pianoist@ya.ru>"]
description = "Represents general musical note and allow to convert it, currently only to MIDI byte and back."
documentation = "https://docs.rs/musical-note/"
edition = "2021"
license = "MIT"
name = "musical-note"
readme = "README.md"
repository = "https://github.com/Levitanus/musical-note"
version = "0.1.105"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
once_cell = "1.16"
regex = "1.7"
serde = {version = "1.0", features = ["derive"]}
